--- a/style.css
+++ b/style.css
@@ -28,29 +28,29 @@ table, th, td {
      height: 300px;
       }
 
+      #menu {
+        text-align: center;
+        font-family: cursive;
+      }
 
-#menu {
-tekst-uitlijnen: rechts;
-lettertype-familie: schreefloos;
-}
+      #menu li {
+        background-color:#d40001;
+        color: rgb(255, 225, 225);
+        border: 3px solid black;
+        border-radius: 1px;
+        display: inline;
+        padding: 1px;
+      }
 
-#menu li {
-achtergrondkleur:#d40001;
-kleur: rgb(255, 223, 0);
-rand: 3px effen zwart;
-randradius: 10px;
-display: inline;
-vulling: 2px;
-}
+      #menu a {
+        text-decoration: none;
+        color: rgb(255, 225, 225)
+      }
 
-#menu a {
-tekst-decoratie: geen;
-kleur: rgb(0, 0, 0)
-}
+      #menu li:hover {
+      background-color: red;
+      }
 
-#menu li:hover {
-achtergrond-kleur: rood;
-}
 
 h1   {text-align: center;
   font-family: cursive;
@@ -62,7 +62,7 @@ h1   {text-align: center;
    background-color: rgb(255, 255, 255);}
 
    h2 {text-align: center;
-     font-family: fantasy;
+     font-family: cursive;
      font-style: italic;
      font-size: 50px;
      font-variant: small-caps;
@@ -71,7 +71,7 @@ h1   {text-align: center;
       background-color: rgb(255, 255, 255);}
 
       h3 {text-align: center;
-        font-family:  sans-serif;
+        font-family: cursive;
         font-style:  italic;
         font-size: 35px;
         font-variant: small-caps;
@@ -80,7 +80,7 @@ h1   {text-align: center;
          background-color: rgb(255, 255, 255);}
 
         ul {font-size: 45px;
-        font-family: monospace;}
+        font-family: cursive;}
 
         li {font-size: 35px;
-        font-family: monospace;}
+        font-family: cursive;}
