--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ table, th, td {
         border-radius: 1px;
         display: inline;
         padding: 1px;
-        text-size: 10px;
+        font-size: 25px;
       }
 
       #menu a {
